@@ -9,6 +9,10 @@
 	<properties>
 		<!-- <jdk.version>14</jdk.version> -->
 		<jdk.version>14</jdk.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+		<maven.compiler.target>${jdk.version}</maven.compiler.target>
+		<maven.compiler.source>${jdk.version}</maven.compiler.source>
 	</properties>
 	<profiles>
 		<!--<profile> <id>dev</id> <properties> <profiles.active>dev</profiles.active> 
@@ -45,14 +49,16 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
+				    <encoding>UTF-8</encoding>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
-					<!-- <release>${jdk.version}</release> -->
-					<fork>true</fork>
-					<meminitial>1024m</meminitial>
-					<maxmem>1024</maxmem>
+                    <!--<release>${jdk.version}</release>-->
+					<!-- <fork>true</fork> -->
+					<meminitial>4096m</meminitial>
+					<maxmem>4096m</maxmem>
 					<compilerArgs>
-						<arg>-verbose</arg>
+						<!-- <arg>-verbose</arg> -->
+						<arg>--enable-preview</arg>
 						<!--<arg>-Xlint:all,-options,-path,-XX:TieredStopAtLevel=1 -XX:TieredStopAtLevel=4 
 							-XX:TieredCompilation -Xlint:all -XX:CompileThreshold -XX:TieredStopAtLevel=4 
 							-XX:CompileThreshold=10000</arg> -->
@@ -63,7 +69,7 @@
 					<dependency>
 						<groupId>org.apache.maven</groupId>
 						<artifactId>maven-core</artifactId>
-						<version>3.5.4</version>
+						<version>3.6.3</version>
 					</dependency>
 					<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api-parent -->
 					<dependency>
@@ -95,20 +101,30 @@
 						<artifactId>stormpot</artifactId>
 						<version>3.0.1</version>
 					</dependency>
-					<dependency>
+					
+					<!-- https://mvnrepository.com/artifact/org.immutables/value -->
+<!-- 					<dependency>
 						<groupId>org.immutables</groupId>
 						<artifactId>value</artifactId>
-						<version>2.8.2</version>
-						<scope>provided</scope>
+						<version>2.8.8</version>
+						<scope>runtime</scope>
 					</dependency>
 					<dependency>
 						<groupId>net.nicoulaj.compile-command-annotations</groupId>
 						<artifactId>compile-command-annotations</artifactId>
 						<version>1.2.3</version>
 						<optional>true</optional>
-					</dependency>
+					</dependency> -->
 				</dependencies>
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -213,11 +229,11 @@
 			<version>2.10</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/it.unimi.dsi/fastutil -->
-		<dependency>
-			<groupId>it.unimi.dsi</groupId>
-			<artifactId>fastutil</artifactId>
-			<version>8.2.2</version>
-		</dependency>
+		<!-- <dependency> -->
+			<!-- <groupId>it.unimi.dsi</groupId> -->
+			<!-- <artifactId>fastutil</artifactId> -->
+			<!-- <version>8.2.2</version> -->
+		<!-- </dependency> -->
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -378,11 +394,11 @@
 			<version>3.0.1-b06</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
 			<version>1.3.2</version>
-		</dependency>
+		</dependency> -->
 		<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
@@ -414,11 +430,6 @@
 			<version>3.8.1</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-configuration2</artifactId>
-			<version>2.3</version>
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -527,22 +538,22 @@
 			<artifactId>httpmime</artifactId>
 			<version>4.3.6</version>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20140107</version>
-		</dependency>
-		<dependency>
+		</dependency> -->
+<!-- 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
-			<scope>test</scope>
+			<!-- <scope>test</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>com.shekhargulati</groupId>
@@ -583,14 +594,6 @@
 			<groupId>org.openjdk.jmh</groupId>
 			<artifactId>jmh-generator-annprocess</artifactId>
 			<version>1.23</version>
-			<!-- ${jmh.version} the processor artifact is required only during compilation 
-				and does not need to be transitive, hence provided scope -->
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.openjdk.jmh</groupId>
-			<artifactId>jmh-generator-annprocess</artifactId>
-			<version>1.23</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -601,8 +604,8 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>compile</scope>
+			<version>4.13</version>
+			<!-- <scope>compile</scope> -->
 		</dependency>
 		<!-- ${junit.jupiter.version} -->
 		<dependency>
@@ -622,7 +625,7 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.12</version>
-			<scope>provided</scope>
+			<!-- <scope>provided</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>com.google.truth</groupId>
